--- a/public/css/default/zebra_database.scss
+++ b/public/css/default/zebra_database.scss
@@ -282,16 +282,16 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
     text-align: left;
     display: block;
     a {
-        background: #178ACC url('db.png') no-repeat 10px center;
+        background: $main_menu_background_color url('db.png') no-repeat 10px center;
         display: block;
         padding: 6px 6px 6px 35px;
-        color: #FFF;
+        color: $main_menu_text_color;
         text-decoration: none;
         span {
             font-weight: bold;
-            background-color: #C40000;
-            padding: 0 5px 0 5px;
-            margin: 0px 4px 0 4px;
+            background-color: $entry_box_error_background_color;
+            margin: 0 0 0 6px;
+            padding: 2px 7px;
         }
     }
 }
