Minor layout update

--- a/public/css/default/zebra_database.css
+++ b/public/css/default/zebra_database.css
@@ -170,7 +170,7 @@
     background: #403d32
 }
 #zdc-globals-submenu a {
-    padding: 8px;
+    padding: 7px 8px 9px;
     color: #fff
 }
 #zdc-globals-submenu a:hover {
