--- a/public/css/default/zebra_database.scss
+++ b/public/css/default/zebra_database.scss
@@ -235,7 +235,7 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
 #zdc-globals-submenu {
     background: $globals_submenu_background_color;
     a {
-        padding: 8px;
+        padding: 7px 8px 9px 8px;
         color: $globals_submenu_text_color;
         &:hover  {
             background: $globals_submenu_background_color_hover;
