--- a/public/css/default/zebra_database.css
+++ b/public/css/default/zebra_database.css
@@ -6,7 +6,8 @@
     font-family: Tahoma,Arial,Helvetica,sans-serif;
     font-size: 13px;
     text-align: left;
-    padding-top: 32px
+    padding-top: 32px;
+    z-index: 9998
 }
 #zdc * {
     margin: 0;
@@ -127,7 +128,7 @@
     background-image: url(db-manager.png)
 }
 #zdc .zdc-entry .zdc-data .zdc-box.zdc-actions ul li a {
-    text-decoration: underline
+    text-decoration: underline!important
 }
 #zdc .zdc-entry .zdc-data .zdc-box.zdc-data-table tr:nth-child(even) {
     background: #e1e1e1
@@ -140,14 +141,16 @@
     background: #9ca68f;
     color: #f0f0f0
 }
+#zdc .zdc-entry .zdc-data .zdc-box pre {
+    padding: 8px
+}
 #zdc-main {
     position: fixed;
     top: 0;
     left: 0;
     background: #151c24;
     font-size: 13px;
-    display: none!important;
-    z-index: 9998
+    display: none!important
 }
 #zdc-main a {
     border-right: 1px solid #fff;
@@ -178,7 +181,7 @@
     color: #fff
 }
 .zdc-syntax-highlight pre {
-    line-height: 1.3;
+    line-height: 1.3!important;
     background: #eee!important;
     border: transparent!important
 }
