--- a/public/css/default/zebra_database.scss
+++ b/public/css/default/zebra_database.scss
@@ -46,6 +46,7 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
     font-size: 13px;
     text-align: left;
     padding-top: 32px;
+    z-index: 9998;
 
     * {
         margin: 0;
@@ -176,7 +177,7 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
                             background-image: url('db-manager.png');
                         }
                         a {
-                            text-decoration: underline;
+                            text-decoration: underline !important;
                         }
                     }
                 }
@@ -191,6 +192,9 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
                         background: $entry_border_color;
                         color: $entry_data_table_header_text_color;
                     }
+                }
+                pre {
+                    padding: 8px;
                 }
             }
         }
@@ -208,7 +212,6 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
     background: $main_menu_background_color;
     font-size: 13px;
     display: none !important;
-    z-index: 9998;
     a {
     border-right: 1px solid $main_menu_text_color;
         color: $main_menu_text_color;
@@ -250,7 +253,7 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
 
 .zdc-syntax-highlight {
     pre {
-        line-height: $entry_syntax_highlighter_line_height;
+        line-height: $entry_syntax_highlighter_line_height !important;
         background: $entry_syntax_highlighter_background_color !important;
         border: transparent !important;
     }
