--- a/public/css/default/zebra_database.css
+++ b/public/css/default/zebra_database.css
@@ -5,6 +5,7 @@
     width: 100%;
     font-family: Tahoma,Arial,Helvetica,sans-serif;
     font-size: 13px;
+    color: #222;
     text-align: left;
     padding-top: 32px;
     z-index: 9998
@@ -13,7 +14,8 @@
     margin: 0;
     padding: 0;
     font-family: inherit;
-    font-size: inherit
+    font-size: inherit;
+    line-height: 1.3
 }
 #zdc .zdc-visible {
     display: block!important
@@ -58,6 +60,10 @@
     background: #69735c;
     color: #fff
 }
+#zdc .zdc-entry .zdc-counter.zdc-counter-ajax {
+    background: #69735c;
+    color: #cddc39
+}
 #zdc .zdc-entry.zdc-transaction .zdc-counter {
     background: #888;
     color: #fff
@@ -95,15 +101,26 @@
 #zdc .zdc-entry .zdc-data .zdc-box.zdc-actions ul li.zdc-time {
     background-image: url(clock.png)
 }
+#zdc .zdc-entry .zdc-data .zdc-box.zdc-actions ul li.zdc-ajax {
+    background-color: #e63570;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    margin-right: 2px
+}
 #zdc .zdc-entry .zdc-data .zdc-box.zdc-actions ul li.zdc-cache {
     background-image: url(cache.png);
     background-color: #cf9;
-    color: #222
+    color: #222;
+    border-radius: 5px;
+    margin-right: 2px
 }
 #zdc .zdc-entry .zdc-data .zdc-box.zdc-actions ul li.zdc-unbuffered {
     background-image: url(unbuffered.png);
     background-color: #ffc;
-    color: #222
+    color: #222;
+    border-radius: 5px;
+    margin-right: 2px
 }
 #zdc .zdc-entry .zdc-data .zdc-box.zdc-actions ul li.zdc-top {
     background-image: url(top.png)
@@ -198,6 +215,9 @@
     font-weight: 700;
     color: #f0f
 }
+.zdc-syntax-highlight .comment {
+    color: teal
+}
 #zdc-mini {
     position: fixed;
     top: 0;
@@ -213,7 +233,8 @@
     display: block;
     padding: 8px 8px 8px 35px;
     color: #fff;
-    text-decoration: none
+    text-decoration: none;
+    line-height: 1.3
 }
 #zdc-mini a span {
     font-weight: 700;
