--- a/src/css/default/zebra_database.scss
+++ b/src/css/default/zebra_database.scss
@@ -18,11 +18,15 @@ $entry_counter_transaction_background_color: #888;
 $entry_counter_transaction_text_color: #FFF;
 $entry_counter_highlight_background_color: #926492;
 $entry_counter_highlight_text_color: #FFF;
+$entry_counter_ajax_background_color: darken($entry_border_color, 20%);
+$entry_counter_ajax_text_color: #CDDC39;
 
 $entry_box_error_background_color: #CC3333;
 $entry_box_error_text_color: #FFF;
 
 $entry_box_actions_menu_background_color: lighten($entry_border_color, 20%);
+$entry_box_actions_menu_ajax_accent_background_color: #E63570;
+$entry_box_actions_menu_ajax_accent_text_color: #FFF;
 $entry_box_actions_menu_cached_accent_background_color: #CCFF99;
 $entry_box_actions_menu_cached_accent_text_color: #222;
 $entry_box_actions_menu_unbuffered_accent_background_color: #FFFFCC;
@@ -33,6 +37,7 @@ $entry_syntax_highlighter_line_height: 1.3;
 $entry_syntax_highlighter_keyword: #990099;
 $entry_syntax_highlighter_string: #008000;
 $entry_syntax_highlighter_symbol: #FF00FF;
+$entry_syntax_highlighter_comment: teal;
 
 $entry_data_table_header_text_color: #F0F0F0;
 $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_background_color, 5%);
@@ -44,6 +49,7 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
     width: 100%;
     font-family: Tahoma, Arial, Helvetica, sans-serif;
     font-size: 13px;
+    color: #222;
     text-align: left;
     padding-top: 32px;
     z-index: 9998;
@@ -53,6 +59,7 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
         padding: 0;
         font-family: inherit;
         font-size: inherit;
+        line-height: 1.3;
     }
 
     /* --------------------------------------------------------------------------------------------------------------------*/
@@ -110,6 +117,10 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
         .zdc-counter {
             background: $entry_counter_background_color;
             color: $entry_counter_text_color;
+            &.zdc-counter-ajax {
+                background: $entry_counter_ajax_background_color;
+                color: $entry_counter_ajax_text_color;
+            }
         }
         &.zdc-transaction .zdc-counter {
             background: $entry_counter_transaction_background_color;
@@ -144,15 +155,26 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
                         &.zdc-time {
                             background-image: url('clock.png');
                         }
+                        &.zdc-ajax {
+                            background-color: $entry_box_actions_menu_ajax_accent_background_color;
+                            color: $entry_box_actions_menu_ajax_accent_text_color;
+                            padding: 5px;
+                            border-radius: 5px;
+                            margin-right: 2px;
+                        }
                         &.zdc-cache {
                             background-image: url('cache.png');
                             background-color: $entry_box_actions_menu_cached_accent_background_color;
                             color: $entry_box_actions_menu_cached_accent_text_color;
+                            border-radius: 5px;
+                            margin-right: 2px;
                         }
                         &.zdc-unbuffered {
                             background-image: url('unbuffered.png');
                             background-color: $entry_box_actions_menu_unbuffered_accent_background_color;
                             color: $entry_box_actions_menu_unbuffered_accent_text_color;
+                            border-radius: 5px;
+                            margin-right: 2px;
                         }
                         &.zdc-top {
                             background-image: url('top.png');
@@ -270,6 +292,9 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
         font-weight: bold;
         color: $entry_syntax_highlighter_symbol;
     }
+    .comment {
+        color: $entry_syntax_highlighter_comment;
+    }
 }
 
 /* --------------------------------------------------------------------------------------------------------------------*/
@@ -291,6 +316,7 @@ $entry_data_table_odd_row_background_color: darken($entry_syntax_highlighter_bac
         padding: 8px 8px 8px 35px;
         color: $main_menu_text_color;
         text-decoration: none;
+        line-height: 1.3;
         span {
             font-weight: bold;
             background-color: $entry_box_error_background_color;
